Ensuring cloud connections - II

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "ts-node src/index.ts",
-    "start:worker": "ts-node src/queue_test.ts",
-    "seed": "ts-node src/seed.ts"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "start:worker": "node dist/queue_test.js",
+    "start:api": "ts-node src/index.ts", 
+    "dev": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
