--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "./node_modules/.bin/tsc",
     "start": "node dist/index.js",
     "start:worker": "node dist/queue_test.js",
     "start:api": "ts-node src/index.ts",
