--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "./node_modules/.bin/tsc",
+    "build": "npx tsc",
     "start": "node dist/index.js",
     "start:worker": "node dist/queue_test.js",
     "start:api": "ts-node src/index.ts",
@@ -20,8 +20,7 @@
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -34,6 +33,7 @@
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0"
+    "prisma": "^7.2.0",
+    "typescript": "^5.9.3"
   }
 }
