--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
+    "build": "tsc",
     "start": "node dist/index.js",
     "start:worker": "node dist/queue_test.js",
     "start:api": "ts-node src/index.ts",
@@ -34,6 +34,6 @@
     "ioredis": "^5.8.2",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.7.2"
   }
 }
