--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,18 +3,18 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "module": "commonjs",
-    "target": "esnext",
+    "moduleResolution": "node",             
+    "target": "es2020",                     
+    "lib": ["es2020"],                      
     "types": ["node"],
+    "typeRoots": ["./node_modules/@types"], 
     "sourceMap": true,
     "declaration": true,
-    "declarationMap": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
     "esModuleInterop": true,
-    "strict": true,
+    "strict": false,                        
     "skipLibCheck": true,
-    "isolatedModules": true
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "dist"]
 }
