--- a/backend/package.json
+++ b/backend/package.json
@@ -15,23 +15,27 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2"
   },
   "dependencies": {
-    "@types/node": "^22.0.0",
-    "@types/cors": "^2.8.19",
     "@google/generative-ai": "^0.24.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@prisma/config": "^7.2.0",
+    "@types/cors": "^2.8.19",
+    "@types/node": "^22.0.0",
+    "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "typescript": "^5.7.2"
