--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.1",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ioredis": "^5.8.2",
