--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cheerio": "^0.22.35",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.4",
@@ -32,6 +33,7 @@
     "@types/node": "^22.0.0",
     "bcryptjs": "^3.0.3",
     "bullmq": "^5.66.1",
+    "cheerio": "^1.2.0",
     "cors": "^2.8.5",
     "cross-fetch": "^4.1.0",
     "dotenv": "^17.2.3",
